force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Contact_Creation_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>summit__Contact_Creation_Duplicate_Rule__c</fullName>
    <description>The name of the Salesforce Duplicate Rule used as the logic for custom Contact Matching</description>
    <label>Contact Creation Duplicate Rule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>summit__Contact_Matching_Rules__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summit Events Contact Creation</fullName>
            </value>
            <value>
                <fullName>Standard Contact Duplicate Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>