force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Contact_Matching_No_Match_Behavior__c.field-meta.xml
<CustomField>
    <fullName>summit__Contact_Matching_No_Match_Behavior__c</fullName>
    <label>Contact Matching No Match Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Contact</fullName>
                <default>true</default>
                <label>Create Contact</label>
            </value>
            <value>
                <fullName>Skip Creating Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>