force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Contact_Matching_Rules__c.field-meta.xml
<CustomField>
    <fullName>summit__Contact_Matching_Rules__c</fullName>
    <description>The type of contact matching you wish to use if  allow for it in the contact creation settings.</description>
    <inlineHelpText>The type of contact matching you wish to use if  allow for it in the contact creation settings.</inlineHelpText>
    <label>Contact Matching Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Salesforce Duplicate Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>