force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Custom_Metadata_Lead_Matching_Method__c.field-meta.xml
<CustomField>
    <fullName>summit__Custom_Metadata_Lead_Matching_Method__c</fullName>
    <label>Custom Metadata Lead Matching Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>