force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Date_Of_Birth_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Date_Of_Birth_Label__c</fullName>
    <defaultValue>&quot;Date of Birth&quot;</defaultValue>
    <description>Label for the Date Of Birth field in the Registration Form</description>
    <inlineHelpText>Label for the Date Of Birth field in the Registration Form</inlineHelpText>
    <label>Date Of Birth Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>