force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Dietary_Restrictions_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Dietary_Restrictions_Label__c</fullName>
    <defaultValue>&apos;Do you have any dietary restrictions?&apos;</defaultValue>
    <description>Label for the Dietary Restrictions field in the Registration Form.</description>
    <inlineHelpText>Label for the Dietary Restrictions field in the Registration Form.</inlineHelpText>
    <label>Dietary Restrictions Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>