force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Display_Guest_Registration__c.field-meta.xml
<CustomField>
    <fullName>summit__Display_Guest_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows event registrants to register the guests they are bringing before the event.</description>
    <inlineHelpText>Allows event registrants to register the guests they are bringing before the event.</inlineHelpText>
    <label>Display Guest Registration</label>
    <type>Checkbox</type>
</CustomField>