force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Display_Optional_Donation__c.field-meta.xml
<CustomField>
    <fullName>summit__Display_Optional_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display a chance to give an optional donation on the submit page.</description>
    <inlineHelpText>Display a chance to give an optional donation on the submit page.</inlineHelpText>
    <label>Display Optional Donation</label>
    <type>Checkbox</type>
</CustomField>