force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Do_not_show_receive_text_question__c.field-meta.xml
<CustomField>
    <fullName>summit__Do_not_show_receive_text_question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will suppress the question about willingness to receive text messaging.</description>
    <inlineHelpText>Checking this box will suppress the question about willingness to receive text messaging.</inlineHelpText>
    <label>Do not show receive text question</label>
    <type>Checkbox</type>
</CustomField>