force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Donation_Allocation_2__c.field-meta.xml
<CustomField>
    <fullName>summit__Donation_Allocation_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation Allocation 2</label>
    <referenceTo>summit__Summit_Events_Fee_Allocation__c</referenceTo>
    <relationshipLabel>Summit Events (Donation Allocation 2)</relationshipLabel>
    <relationshipName>Summit_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>