force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Donation_Allocation_3__c.field-meta.xml
<CustomField>
    <fullName>summit__Donation_Allocation_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation Allocation 3</label>
    <referenceTo>summit__Summit_Events_Fee_Allocation__c</referenceTo>
    <relationshipLabel>Summit Events (Donation Allocation 3)</relationshipLabel>
    <relationshipName>Summit_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>