force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Donation_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Donation_Description__c</fullName>
    <description>A description that appears on the donation page.</description>
    <inlineHelpText>A description that appears on the donation page.</inlineHelpText>
    <label>Donation Description</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>