force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Donation_Suggested_Amount_List__c.field-meta.xml
<CustomField>
    <fullName>summit__Donation_Suggested_Amount_List__c</fullName>
    <description>Return separated list of suggested donation amounts. An &quot;Other&quot; category will automatically be added.</description>
    <inlineHelpText>Return separated list of suggested donation amounts, NUMBERS ONLY, exclude &quot;$&quot;. An &quot;Other&quot; category will automatically be added.</inlineHelpText>
    <label>Donation Suggested Amount List</label>
    <type>TextArea</type>
</CustomField>