force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Donation_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Donation_Title__c</fullName>
    <description>Title displayed on the top of the optional donation page.</description>
    <inlineHelpText>Title displayed on the top of the optional donation page.</inlineHelpText>
    <label>Donation Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>