force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Email_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Email_Label__c</fullName>
    <defaultValue>&quot;Email&quot;</defaultValue>
    <description>Label for the Email field in the Registration Form</description>
    <inlineHelpText>Label for the Email field in the Registration Form</inlineHelpText>
    <label>Email Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>