force-app/main/default/objects/summit__Summit_Events__c/fields/summit__End_Date__c.field-meta.xml
<CustomField>
    <fullName>summit__End_Date__c</fullName>
    <description>End date will impact the Event Instance Feed URL. As the End Date changes, the URL will change and update. End date should reflect the range of date Event Instances should appear in the URL.</description>
    <inlineHelpText>Date the LAST Instance should close.

Note: the Event Instance Feed URL is dynamic and  will update as the end date changes. Registration of the Instance is independent of this end date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>