force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Additional_Question_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Additional_Question_Title__c</fullName>
    <description>The title that appears on the Custom Questions page if there are related list custom question records for the registrant.</description>
    <inlineHelpText>The title that appears on the Custom Questions page if there are related list custom question records for the registrant.</inlineHelpText>
    <label>Event Custom Question Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>