force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Additional_Questions_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Additional_Questions_Description__c</fullName>
    <description>If entered these instructions will appear on the custom questions page if there are any related list custom question records.</description>
    <inlineHelpText>If entered these instructions will appear on the custom questions page if there are any related list custom question records.</inlineHelpText>
    <label>Event Custom Questions Description</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>