force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Appointment_Chosen_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Appointment_Chosen_Label__c</fullName>
    <defaultValue>&quot;Selected options&quot;</defaultValue>
    <description>The label the registrant sees as a header for the list of appointments they have selected.</description>
    <inlineHelpText>The label the registrant sees as a header for the list of appointments they have selected.</inlineHelpText>
    <label>Event Appointment Chosen Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>