force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Appointment_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Appointment_Description__c</fullName>
    <description>If entered these instructions/description that appear before the appointment options section of the event</description>
    <inlineHelpText>If entered these instructions/description that appear before the appointment options section of the event</inlineHelpText>
    <label>Event Appointment Description</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>