force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Appointment_Next_Instructions__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Appointment_Next_Instructions__c</fullName>
    <defaultValue>&quot;Once you have made your selections click next.&quot;</defaultValue>
    <description>Instructions that appear just before hitting the next button at the bottom of the page indicating this is when appointments are saved.</description>
    <inlineHelpText>Instructions that appear just before hitting the next button at the bottom of the page indicating this is when appointments are saved.</inlineHelpText>
    <label>Event Appointment Next Instructions</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>