force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Appointment_Submit_List_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Appointment_Submit_List_Label__c</fullName>
    <description>Appears on the submit page as title to itemized list of Appointments. Defaults to &quot;Selected options&quot;</description>
    <inlineHelpText>Appears on the submit page as title to itemized list of fees. Defaults to &quot;Selected options&quot;</inlineHelpText>
    <label>Event Appointment Submit List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>