force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Appointment_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Appointment_Title__c</fullName>
    <description>Title (heading) that appears before the appointments (if any) for the event.</description>
    <inlineHelpText>Title (heading) that appears before the appointments (if any) for the event.</inlineHelpText>
    <label>Event Appointment Title</label>
    <type>TextArea</type>
</CustomField>