force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Appointment_Unchosen_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Appointment_Unchosen_Label__c</fullName>
    <defaultValue>&quot;Choose your options&quot;</defaultValue>
    <description>The label the registrant sees as a header for the list of available appointments that have not been chosen.</description>
    <inlineHelpText>The label the registrant sees as a header for the list of available appointments that have not been chosen.</inlineHelpText>
    <label>Event Appointment Unchosen Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>