force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Cancel_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Cancel_Review_Description__c</fullName>
    <description>The instructions on the cancel review page.</description>
    <inlineHelpText>The instructions on the cancel review page.</inlineHelpText>
    <label>Event Cancel Review Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>