force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Cancel_Review_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Cancel_Review_Title__c</fullName>
    <description>The title on the page for cancel and review</description>
    <inlineHelpText>The title on the page for cancel and review</inlineHelpText>
    <label>Event Cancel Review Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>