force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Cancelled_Notification_Text__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Cancelled_Notification_Text__c</fullName>
    <description>The text that appears to tell a client that their event is cancelled on the review cancel page.</description>
    <inlineHelpText>The text that appears to tell a client that their event is cancelled on the review cancel page.</inlineHelpText>
    <label>Event Cancelled Notification Text</label>
    <type>TextArea</type>
</CustomField>