force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Confirmation_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Confirmation_Description__c</fullName>
    <description>The final page of the event registration. Thank for the registration and describe next steps.</description>
    <inlineHelpText>The final page of the event registration. Thank for the registration and describe next steps.</inlineHelpText>
    <label>Event Confirmation Description</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>