force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Confirmation_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Confirmation_Title__c</fullName>
    <description>The title that appears on the confirmation page of the event process. The last page once registration is submitted.</description>
    <inlineHelpText>The title that appears on the confirmation page of the event process. The last page once registration is submitted.</inlineHelpText>
    <label>Event Confirmation Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>