force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_description__c</fullName>
    <description>Description of Event</description>
    <inlineHelpText>Describe the event</inlineHelpText>
    <label>Event Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>