force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fee__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fee__c</fullName>
    <description>Fee (cost) for the event.</description>
    <inlineHelpText>Fee (cost) for the event.</inlineHelpText>
    <label>Event Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>