force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fee_Additional__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fee_Additional__c</fullName>
    <description>Second fee associated with this event. Can be useful for splitting fees between donation and event costs.</description>
    <inlineHelpText>Second fee associated with this event. Can be useful for splitting fees between donation and event costs.</inlineHelpText>
    <label>Event Fee Additional</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>