force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fee_Allocation__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fee_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Fee Allocation</label>
    <referenceTo>summit__Summit_Events_Fee_Allocation__c</referenceTo>
    <relationshipLabel>Summit Events</relationshipLabel>
    <relationshipName>Summit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>