force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fee_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fee_Label__c</fullName>
    <defaultValue>&quot;Event Cost&quot;</defaultValue>
    <description>The label you wish to apply to the cost of the event itself. This will default to &quot;Event Cost.&quot;</description>
    <inlineHelpText>The label you wish to apply to the cost of the event itself. This will default to &quot;Event Cost.&quot;</inlineHelpText>
    <label>Event Fee Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>