force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fee_Submit_List_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fee_Submit_List_Label__c</fullName>
    <defaultValue>&quot;Event Charges&quot;</defaultValue>
    <description>Appears on the submit page as title to itemized list of fees. Defaults to &quot;Event Charges&quot;</description>
    <inlineHelpText>Appears on the submit page as title to itemized list of fees. Defaults to &quot;Event Charges&quot;</inlineHelpText>
    <label>Event Fee Submit List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>