force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fee_Total_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fee_Total_Label__c</fullName>
    <defaultValue>&quot;Total&quot;</defaultValue>
    <description>Appears on the total cost line of the submit page fee listing. Defaults to &quot;Total&quot;</description>
    <inlineHelpText>Appears on the total cost line of the submit page fee listing. Defaults to &quot;Total&quot;</inlineHelpText>
    <label>Event Fee Total Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>