force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Fees_Received_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Fees_Received_Label__c</fullName>
    <defaultValue>&quot;Payments Received&quot;</defaultValue>
    <description>Appears on the confirmation page as title to the itemized list of fees where fee received is displayed. Defaults to &quot;Payments Received&quot;</description>
    <inlineHelpText>Appears on the confirmation page as title to the itemized list of fees where fee received is displayed. Defaults to &quot;Payments Received&quot;</inlineHelpText>
    <label>Event Fees Received Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>