force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Footer__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Footer__c</fullName>
    <description>Footer that follows through event process. Can contain contact information for issues and information</description>
    <inlineHelpText>Footer that follows through event process. Can contain contact information for issues and information</inlineHelpText>
    <label>Event Footer</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>