force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Full_Text__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Full_Text__c</fullName>
    <description>This text will appear if registration is unavailable due to the instance reaching capacity and/or the registration date passing. It will also appear if/when the related instances is not in an Active status.</description>
    <inlineHelpText>This text will appear if registration is unavailable due to the instance reaching capacity and/or the registration date passing. It will also appear if/when the related instances is not in an Active status.</inlineHelpText>
    <label>Event Closed Display Text</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>