force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Guest_Submit_List_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Guest_Submit_List_Label__c</fullName>
    <description>Appears on the submit page as title to itemized list of Guests. Defaults to &quot;Additional guests registered&quot;</description>
    <inlineHelpText>Appears on the submit page as title to itemized list of fees. Defaults to &quot;Additional guests registered&quot;</inlineHelpText>
    <label>Event Guest Submit List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>