force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Home_Link_Title__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Home_Link_Title__c</fullName>
    <defaultValue>&apos;Event Home&apos;</defaultValue>
    <description>The title that will appear as a link at the top of the page to take you back to wherever you described the event on the Web.</description>
    <inlineHelpText>The title that will appear as a link at the top of the page to take you back to wherever you described the event on the Web.</inlineHelpText>
    <label>Event Home Link Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>