force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Home_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Home_Link_URL__c</fullName>
    <description>The link to the page that initiated the event registration.</description>
    <inlineHelpText>The link to the page that initiated the event registration.</inlineHelpText>
    <label>Event Home Link URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>