force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Name__c</fullName>
    <description>Event Name</description>
    <inlineHelpText>Name of the event that displays on the registration page</inlineHelpText>
    <label>Event Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>