force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Payment_Due_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Payment_Due_Description__c</fullName>
    <description>This is an optional opportunity to add more description when a payment is received. It appears after the Payment Received heading.</description>
    <inlineHelpText>This is an optional opportunity to add more description when a payment is received. It appears after the Payment Received heading.</inlineHelpText>
    <label>Event Payment Due Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>