force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Payment_Due_Heading_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Payment_Due_Heading_Label__c</fullName>
    <defaultValue>&quot;Payment Due&quot;</defaultValue>
    <description>The heading that appear above the fees when payment was not received and fees are still due. Defaults to &quot;Payment Due.&quot;</description>
    <inlineHelpText>The heading that appear above the fees when payment was not received and fees are still due. Defaults to &quot;Payment Due.&quot;</inlineHelpText>
    <label>Event Payment Due Heading Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>