force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Payment_Received_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Payment_Received_Description__c</fullName>
    <description>This is an optional opportunity to add more description when a payment was not received and fees are still due. It appears after the Payment Due heading and before the fee list.</description>
    <inlineHelpText>This is an optional opportunity to add more description when a payment was not received and fees are still due. It appears after the Payment Due heading and before the fee list.</inlineHelpText>
    <label>Event Payment Received Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>