force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Payment_Received_Heading_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Payment_Received_Heading_Label__c</fullName>
    <defaultValue>&quot;Payment Received&quot;</defaultValue>
    <description>The heading that appear above the fees when all payments are received. Defaults to &quot;Payment Received.&quot;</description>
    <inlineHelpText>The heading that appear above the fees when all payments are received. Defaults to &quot;Payment Received.&quot;</inlineHelpText>
    <label>Event Payment Received Heading Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>