force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Short_Listing_Description__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Short_Listing_Description__c</fullName>
    <description>This description displays on concise list of events and should not be verbose</description>
    <inlineHelpText>This description displays on concise list of events and should not be verbose</inlineHelpText>
    <label>Event Short Listing Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>