force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Sponsor__c</fullName>
    <description>This will allow filtering on this event based on non-program events.</description>
    <inlineHelpText>This will allow filtering on this event based on non-program events.</inlineHelpText>
    <label>Event Sponsor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>President&apos;s Cabinet</fullName>
            </value>
            <value>
                <fullName>Board of Trustees</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Center for Common Good</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>