force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Event_Status__c.field-meta.xml
<CustomField>
    <fullName>summit__Event_Status__c</fullName>
    <description>Status of event (Planning, Active, Inactive, Closed, Cancelled)</description>
    <inlineHelpText>Status of event and controls whether it appears on the calendar and in the Instance Feed URL</inlineHelpText>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>summit__Active_Status</valueSetName>
    </valueSet>
</CustomField>